# smcrypto-ffi

./: Cargo.toml  README.md  build.rs  cbindgen.toml
.github/workflows/: rust.yml
src/: ffi.rs  lib.rs
