[package]
name = "smcrypto-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.155"
num-traits = "0.2.14"
num-bigint = "0.4.3"
hex = "0.4.3"
num-integer = "0.1.44"
rand = "0.8.4"
pem = "1.0.2"
base64 = "0.13.0"
yasna = {version = "0.5.0", features = ["num-bigint"]}

[build-dependencies]
cbindgen = "0.26.0"

[lib]
crate-type = ["cdylib"]
